--- a/package.json
+++ b/package.json
@@ -1,10 +1,6 @@
 {
   "name": "crossroads",
   "version": "0.0.0",
-  "engines": {
-    "node": "~8.11.3",
-    "npm": "~5.6.0"
-  },
   "private": true,
   "scripts": {
     "test": "mocha",
@@ -35,5 +31,9 @@
     "node-fetch": "^2.1.2",
     "pug": "2.0.0-beta11",
     "serve-favicon": "~2.4.5"
+  },
+  "engines": {
+    "node": ">=8.11.3",
+    "npm": ">=5.6.0"
   }
 }
